Login Register proces done. Wallet process begin.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
-.crypto-coin-exchange-list-div {
+.crypto-coin-exchange-list-div, .wallet-div {
     margin-top: 5%;
 }
+
 
 .bg-green {
     background-color: green!important;
